--- a/index.html
+++ b/index.html
@@ -1,54 +1,160 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이력서</title>
-    <link rel="stylesheet" href="styles2.css">
+  <meta charset="UTF-8">
+  <title>주니어 데이터 분석가 이력서</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    :root {
+      --bg-light: #f5f5f5;
+      --bg-dark: #1e1e1e;
+      --text-light: #1e1e1e;
+      --text-dark: #f5f5f5;
+      --accent: #4fc3f7;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      transition: background-color 0.3s, color 0.3s;
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Modern_data_visualization_chart.svg/1280px-Modern_data_visualization_chart.svg.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+
+    body.light {
+      background-color: var(--bg-light);
+      color: var(--text-light);
+    }
+
+    body.dark {
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
+    }
+
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background-color: rgba(255,255,255,0.9);
+      padding: 2rem;
+      border-radius: 10px;
+      margin-top: 50px;
+    }
+
+    body.dark .container {
+      background-color: rgba(30,30,30,0.9);
+    }
+
+    .toggle-switch {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+    }
+
+    .toggle-switch input[type="checkbox"] {
+      display: none;
+    }
+
+    .toggle-switch label {
+      cursor: pointer;
+      background-color: #ccc;
+      border-radius: 20px;
+      display: inline-block;
+      width: 50px;
+      height: 25px;
+      position: relative;
+    }
+
+    .toggle-switch label::after {
+      content: '';
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: 20px;
+      height: 20px;
+      background: white;
+      border-radius: 50%;
+      transition: 0.3s;
+    }
+
+    .toggle-switch input[type="checkbox"]:checked + label {
+      background-color: var(--accent);
+    }
+
+    .toggle-switch input[type="checkbox"]:checked + label::after {
+      transform: translateX(25px);
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .section {
+      margin-bottom: 2rem;
+    }
+
+    .email {
+      font-weight: bold;
+    }
+
+  </style>
 </head>
-<body>
-<div class="resume">
-    <header>
-        <h1>권병우</h1>
-        <p>이메일: hong@example.com | 전화번호: 010-1234-5678 | 주소: 서울특별시</p>
-    </header>
-    <section>
-        <h2>프로필</h2>
-        <p>효과적으로 문제를 해결하고 창의적인 해결책을 제시하는 개발자입니다. 팀과의 협력을 중시하며 새로운 기술을 배우고 적용하는 것을 좋아합니다.</p>
-    </section>
-    <section>
-        <h2>경력</h2>
-        <div class="job">
-            <h3>ABC 회사</h3>
-            <p>프론트엔드 개발자 | 2020.01 - 현재</p>
-            <ul>
-                <li>React를 사용한 웹 애플리케이션 개발</li>
-                <li>UI/UX 개선 및 사용자 피드백 반영</li>
-                <li>팀 프로젝트 관리 및 협업</li>
-            </ul>
-        </div>
-        <div class="job">
-            <h3>XYZ 회사</h3>
-            <p>백엔드 개발자 | 2018.01 - 2019.12</p>
-            <ul>
-                <li>Node.js를 사용한 서버 개발</li>
-                <li>데이터베이스 설계 및 최적화</li>
-                <li>API 개발 및 유지보수</li>
-            </ul>
-        </div>
-    </section>
-    <section>
-        <h2>교육</h2>
-        <p>서울대학교 컴퓨터공학과 | 학사 | 2013.03 - 2017.02</p>
-    </section>
-    <section>
-        <h2>기술</h2>
-        <ul>
-            <li>프로그래밍 언어: JavaScript, Python, Java</li>
-            <li>프레임워크: React, Node.js, Django</li>
-            <li>도구: Git, Docker, Jenkins</li>
-        </ul>
-    </section>
-</div>
+<body class="light">
+  <div class="toggle-switch">
+    <input type="checkbox" id="darkModeToggle" />
+    <label for="darkModeToggle"></label>
+  </div>
+
+  <div class="container">
+    <h1>홍길동</h1>
+    <p>주니어 데이터 분석가 | <span class="email"><a href="mailto:youremail@example.com">youremail@example.com</a></span></p>
+
+    <div class="section">
+      <h2>📊 기술 스택</h2>
+      <ul>
+        <li>Python (pandas, matplotlib, seaborn)</li>
+        <li>SQL (MySQL, PostgreSQL)</li>
+        <li>Excel, Tableau</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>📁 프로젝트</h2>
+      <p><strong>판매 데이터 분석</strong> - 대시보드 시각화 및 트렌드 분석</p>
+      <p><strong>고객 이탈 예측 모델링</strong> - 로지스틱 회귀 + 데이터 클렌징</p>
+    </div>
+
+    <div class="section">
+      <h2>📚 교육</h2>
+      <p>○○대학교 통계학과 졸업</p>
+    </div>
+  </div>
+
+  <script>
+    const toggle = document.getElementById('darkModeToggle');
+    const body = document.body;
+
+    toggle.addEventListener('change', () => {
+      if (toggle.checked) {
+        body.classList.remove('light');
+        body.classList.add('dark');
+      } else {
+        body.classList.remove('dark');
+        body.classList.add('light');
+      }
+    });
+  </script>
 </body>
 </html>
