--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
   </div>
 
   <div class="container">
-    <h1>홍길동</h1>
-    <p>주니어 데이터 분석가 | <span class="email"><a href="mailto:youremail@example.com">youremail@example.com</a></span></p>
+    <h1>권병우</h1>
+    <p>junior data analyst | <span class="email"><a href="mailto:youremail@example.com">youremail@example.com</a></span></p>
 
     <div class="section">
       <h2>📊 기술 스택</h2>
