--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       transition: background-color 0.3s, color 0.3s;
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Modern_data_visualization_chart.svg/1280px-Modern_data_visualization_chart.svg.png');
+      background-image: url('https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F5335%2F2020%2F01%2F07%2F0000178858_001_20200107215633624.jpg&type=l340_165');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
