--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       transition: background-color 0.3s, color 0.3s;
-      background-image: url('https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNTAyMjZfMzEg%2FMDAxNzQwNDk4Nzc1MTk2.U0RIaFkiEuEpkjPQ6n_RgICYUX3mhKzsDGELhGcn_2Qg.3c2TCelKcaQtD8Nrp-9D8_cfHUCSXwsrsayLJjtvZegg.JPEG%2F1.jpg&type=a340');
+      background-image: url('https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxODAxMDVfMTIg%2FMDAxNTE1MTQwOTU2MDY3.MToHfFXfMpfOQo8KZglIBRXUCRPhTizYGls1nrXEbrgg.kBY37VGvTl6N_a9gJXNUEfBzPc3dQlpLDnvOUBrGBxYg.JPEG.daegu_news%2F19794786.jpg&type=sc960_832');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
