--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>주니어 데이터 분석가 이력서</title>
+  <title>권병우 이력서</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     :root {
@@ -119,7 +119,7 @@
 
   <div class="container">
     <h1>권병우</h1>
-    <p>junior data analyst | <span class="email"><a href="mailto:youremail@example.com">youremail@example.com</a></span></p>
+  <junior data analyst | <span class="email"><a href="mailto:youremail@example.com">kbw0178@naver.com</a></span>
 
     <div class="section">
       <h2>📊 기술 스택</h2>
