--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
       --text-dark: #f5f5f5;
       --accent: #4fc3f7;
     }
+    .darkmode-button {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  background-color: var(--accent);
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 14px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
+}
+
+.darkmode-button:hover {
+  background-color: #0288d1;
+}
 
     body {
       margin: 0;
