--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed;
+      <button class="darkmode-button" onclick="toggleDarkMode()">다크모드</button>
     }
 
     body.light {
