--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
   <div class="container">
     <h1>권병우</h1>
-  <p></p><junior data analyst | <span class="email"><a href="mailto:youremail@example.com">kbw0178@naver.com</a></span></p>
+  <p></p><junior data analyst | <span class="email"><a href="mailto:kbw0178@naver.com"></a></span></p>
 
     <div class="section">
       <h2>📊 기술 스택</h2>
