--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       background-color: var(--bg-light);
       color: var(--text-light);
       transition: background-color 0.4s, color 0.4s;
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Modern_data_visualization_chart.svg/1280px-Modern_data_visualization_chart.svg.png');
+      background-image: url('https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzExMTBfMTEy%2FMDAxNjk5NTk3MjE1NDY4.JrrXefVxKYMuYpytK0pMlbjv8Esxip_9qqzvmU8jih8g.kK1MEaSI5c8JL_5Jsr0He66zJVoO5yCPF7fyGp3EHOMg.PNG.ddungsi%2F004.PNG&type=sc960_832');
       background-size: cover;
       background-attachment: fixed;
       background-position: center;
