--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       background-color: var(--bg-light);
       color: var(--text-light);
       transition: background-color 0.4s, color 0.4s;
-      background-image: url('https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzExMTBfMTEy%2FMDAxNjk5NTk3MjE1NDY4.JrrXefVxKYMuYpytK0pMlbjv8Esxip_9qqzvmU8jih8g.kK1MEaSI5c8JL_5Jsr0He66zJVoO5yCPF7fyGp3EHOMg.PNG.ddungsi%2F004.PNG&type=sc960_832');
+      background-image: url('https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA4MTBfOSAg%2FMDAxNTY1Mzc0NDUxMTA3.HlTTFZi-R9EYQ2SYgkZEyMEXSIDD-GtVIolnv5CkHWsg.L4OZcvDiLDfAhiwGYL-672xrVRtliWlcYVRS53-cf8Qg.JPEG.cinedemian%2FbigData-1024x576.jpg&type=sc960_832');
       background-size: cover;
       background-attachment: fixed;
       background-position: center;
