--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       background-color: var(--bg-light);
       color: var(--text-light);
       transition: background-color 0.4s, color 0.4s;
-      background-image: url('https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA4MTBfOSAg%2FMDAxNTY1Mzc0NDUxMTA3.HlTTFZi-R9EYQ2SYgkZEyMEXSIDD-GtVIolnv5CkHWsg.L4OZcvDiLDfAhiwGYL-672xrVRtliWlcYVRS53-cf8Qg.JPEG.cinedemian%2FbigData-1024x576.jpg&type=sc960_832');
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Modern_data_visualization_chart.svg/1280px-Modern_data_visualization_chart.svg.png');
       background-size: cover;
       background-attachment: fixed;
       background-position: center;
