--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </button>
 
   <div class="container">
-    <h1>홍길동</h1>
+    <h1> 권병우 </h1>
     <p>주니어 데이터 분석가 | 
       <span class="email">
         <a href="mailto:youremail@example.com">youremail@example.com</a>
